# SIME

./: .gitmodules  CMakeLists.txt  main.cpp  test.cpp
include/: Sime.h
libs/SDL2/docs/: README-gdk.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
src/: Entry.h  types.h
src/app/: Application.cpp  Application.h  Sandbox.h
src/renderer/: RenderContext.cpp  RenderContext.h
src/ui/: UIContext.cpp  UIContext.h
